--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
+*{
+    padding: 0;
+    margin: 0; 
+}
 body{
     background-color: rgb(207, 50, 50);
     color: #000000;
+    font-size: 24px;
 
 }
 
@@ -29,8 +34,13 @@ padding: 24px;
     background-image: linear-gradient(#CF3232, #8B0000);
     justify-content: center;
     align-items: center;
+    display: flex;
 }
 
 .escola-div-conteudo{
 width: 35%;
+}
+
+.escola-titulo{
+    padding: 24px 0;;
 }
